...
        child: SingleChildScrollView(
          physics: const ClampingScrollPhysics(),
          padding: const EdgeInsets.only(bottom: 85.0),
          child: Column(
            children: [
              // Top Header Bar
              const ErpHeaderBar(title: 'Setting'),

              const SizedBox(height: 12),

              // User Info Banner
              Padding(
                padding: const EdgeInsets.symmetric(horizontal: 20.0),
...
                        title: 'Help & Support',
                        onTap: () => _navigateToSubIndex(3),
                      ),
                      const Divider(color: Color(0xFFF1F5F9), height: 1),
                      _buildOptionTile(
                        icon: Icons.logout_rounded,
                        title: 'Logout',
                        textColor: const Color(0xFFFF334B),
                        iconColor: const Color(0xFFFF334B),
                        hideChevron: true,
                        onTap: () async {
                          await AuthService.logout();
                          if (context.mounted) {
...
