...
                            ),
                          )
                        : Column(
                            children: [
                              const SizedBox(height: 32),
                              CustomButton(
                                text: 'Login',
                                variant: CustomButtonVariant.primary,
                                onPressed: () {
                                  Navigator.pushNamed(context, '/login');
                                },
                              ),
                              const SizedBox(height: 16),
...
